fixed spacing for hero text

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 .bottom-header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between; 
+    justify-content: space-around; 
     height: 225px;
 }
 
